--- a/app/views/todolists/new.html.erb
+++ b/app/views/todolists/new.html.erb
@@ -1,9 +1,9 @@
 <h1>新規投稿</h1>
+<!-- form_with部分-->
 <%= form_with model: @list, url:'/todolists', local:true do |f| %>
-<!--<%=%>：タグ内の結果が画面に表示される-->
   <h4>タイトル</h4>
   <%= f.text_field :title %>
   <h4>本文</h4>
   <%= f.text_area :body %>
-  <%= f.submit '投稿' %>
+  <%= f.submt '投稿' %>
 <% end %>
