[Update] 2-5 Rails: 一覧画面へリンクを設定

--- a/app/views/todolists/index.html.erb
+++ b/app/views/todolists/index.html.erb
@@ -4,5 +4,7 @@
 <!--.eachメソッドは配列の要素を順番に取得し繰り返し処理を実行する -->
 <% @lists.each do |list| %>
   <p>タイトル</p>
-  <span><%= list.title %></span>
+  <span>
+    <%= link_to list.title, "todolists/#{list. id}" %>
+  </span>
 <% end %>
