--- a/app/views/todolists/index.html.erb
+++ b/app/views/todolists/index.html.erb
@@ -1,14 +1,15 @@
-<!-- @listsから取得した投稿データをすべて表示 -->
-<h1>投稿一覧</h1>
-<!--<% %>は画面に表示しない -->
-<!--.eachメソッドは配列の要素を順番に取得し繰り返し処理を実行する -->
-<% @lists.each do |list| %>
-  <p>タイトル</p>
-  <span>
-    <%= link_to list.title, todolist_path(list.id) %>
-  </span>
-<!-- 投稿画像を表示するためattachment_image_tagを埋め込み。refile特有の書式 -->
-<!-- 画像の幅を:fillで指定し、高さをpxで指定、表示する画像の拡張子をformatで指定-->
-  <p>画像</p>
-  <%= attachment_image_tag list, :image, :fill, 100, 100, format: 'jpeg' %>
-<% end %>
+<div class="list-wrap">
+  <!-- @listsから取得した投稿データを、.eachメソッドにより配列の要素を順番に取得し繰り返し処理をすることですべて表示 -->
+  <% @lists.each do |list| %>
+    <div class="list-box">
+    <!-- 投稿画像を表示するためattachment_image_tagを埋め込み。refile特有の書式 -->
+    <!-- 画像の幅を:fillで指定し、高さをpxで指定、表示する画像の拡張子をformatで指定-->
+      <%= attachment_image_tag list, :image, :fill, 200, 200, format: 'jpeg' %>
+      <div class="list-comment">
+        <!-- <%= list.body %> はListモデルのbodyカラムに入っているデータを呼び出している -->
+        <span class="list-body"><%= list.body %></span>
+        <span class="list-title"><%= link_to list.title, todolist_path(list.id) %></span>
+      </div>
+    </div>
+  <% end %>
+</div>
