--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
           <% link_to "Top", top_path %>
         </li>
         <li class="nav-list-item">
-          <% link_to "TodoLists", todolist_path %>
+          <% link_to "TodoLists", todolists_path %>
         </li>
         <li class="nav-list-item">
-          <% link_to "New List", todolist_new_path %>
+          <% link_to "New List", todolists_new_path %>
         </li>
       </ul>
     </nav>
