--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,13 @@
     <nav>
       <ul class="nav-list">
         <li class="nav-list-item">
-          <% link_to "Top", top_path %>
+          <%= link_to "Top", top_path %>
         </li>
         <li class="nav-list-item">
-          <% link_to "TodoLists", todolists_path %>
+          <%= link_to "TodoLists", todolists_path %>
         </li>
         <li class="nav-list-item">
-          <% link_to "New List", todolists_new_path %>
+          <%= link_to "New List", todolists_new_path %>
         </li>
       </ul>
     </nav>
