--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,15 +15,15 @@
  */
 
 * {
- margin: 0;
- padding: 0;
- box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 header {
   width: 90%;
   padding: 15px 0;
-  margin: 30px auto;
+  margin: 30px auto 0;
   text-align: center;
   border-top: solid 5px #000000;
 }
@@ -33,7 +33,7 @@ header .headline {
 }
 
 nav {
-  width: 800px;
+  width: 880px;
   margin: 0 auto;
   border-top: solid 0.7px #000000;
   border-bottom: solid 0.7px #000000;
